# MicMac

./: .gitignore  CMakeLists.txt  LICENSE  README.md  copy_artworks.sh
DataSimulated/: CST_POP_SIZE.yaml  CST_POP_SIZE_0.02.yaml  CST_POP_SIZE_0.1.yaml  CST_POP_SIZE_STABILIZING.yaml  CST_POP_SIZE_VE.yaml  FLUCTUATING_POP_SIZE.yaml  FLUCTUATING_POP_SIZE_0.02.yaml  FLUCTUATING_POP_SIZE_0.1.yaml  FLUCTUATING_POP_SIZE_VE.yaml  LARGEPOP_CST_POP_SIZE_VE.yaml  Snakefile  run.sh
data_empirical/: README.md  Snakefile  config.yaml
data_simulated/: README.md  RevBayesMerge.py  Snakefile  constant_pop_size.yaml  constant_pop_size_10k.yaml  constant_pop_size_20k.yaml  constant_pop_size_500.yaml  constant_pop_size_L15000.yaml  constant_pop_size_L30000.yaml  figures.yaml  run.sh  (+13 more)
simulator/: CMakeLists.txt  Makefile  README.md
simulator/src/: directional.cpp  moving_optimum.cpp  neutral.cpp  selection.cpp  stabilizing.cpp
simulator/src/lib/: argparse.hpp  fitness.hpp  io.hpp  random.hpp  statistic.hpp  tree.hpp  wright_fisher.hpp
simulator/trees/: MamGenTimescale.f.species.nwk  MamGenTimescale.f.species.tsv  MamGenTimescale.f.traits.tsv  MamGenTimescale.f.var_within.tsv  MamGenTimescale.m.species.nwk  MamGenTimescale.m.species.tsv  MamGenTimescale.m.traits.tsv  MamGenTimescale.m.var_within.tsv  compute_params.py  mammal.tre  mammal.tre.annotated  mammal_subtree.tre  mammal_subtree.tre.annotated  name_internal_nodes_tree.py  star.tre
simulator/utils/: nhx-parser.hpp
simulator/utils/tclap/: Arg.h  ArgException.h  CmdLine.h  MultiArg.h  UnlabeledMultiArg.h  XorHandler.h
(+92 files in other folders)
